{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 18,
  "lineage": "115bee8d-3e36-d615-5049-ec581452c536",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "techno_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09007a394be6d9e2a",
            "arn": "arn:aws:ec2:us-east-1:778876534404:elastic-ip/eipalloc-09007a394be6d9e2a",
            "domain": "vpc",
            "id": "eipalloc-09007a394be6d9e2a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-80-82-155.compute-1.amazonaws.com",
            "public_ip": "98.80.82.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techno_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:internet-gateway/igw-0f9cba7fb11d7ffd3",
            "id": "igw-0f9cba7fb11d7ffd3",
            "owner_id": "778876534404",
            "tags": {
              "Name": "techno-igw"
            },
            "tags_all": {
              "Name": "techno-igw"
            },
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "techno_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09007a394be6d9e2a",
            "association_id": "eipassoc-0c4fc3011c0fa1929",
            "connectivity_type": "public",
            "id": "nat-0aff864d5cd9b3a99",
            "network_interface_id": "eni-0a120a14780e55157",
            "private_ip": "25.1.0.175",
            "public_ip": "98.80.82.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1ddb492b4f0af55",
            "tags": {
              "Name": "techno-nat"
            },
            "tags_all": {
              "Name": "techno-nat"
            }
          },
          "dependencies": [
            "aws_eip.techno_nat_eip",
            "aws_subnet.techno_public_a",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techno_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:route-table/rtb-0e52da3016b44e7b7",
            "id": "rtb-0e52da3016b44e7b7",
            "owner_id": "778876534404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aff864d5cd9b3a99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Techno-private"
            },
            "tags_all": {
              "Name": "Techno-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.techno_nat_eip",
            "aws_nat_gateway.techno_nat",
            "aws_subnet.techno_public_a",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techno_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:route-table/rtb-0dfbf2ec27559dafc",
            "id": "rtb-0dfbf2ec27559dafc",
            "owner_id": "778876534404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9cba7fb11d7ffd3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Techno-public"
            },
            "tags_all": {
              "Name": "Techno-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.techno_igw",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno_private_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fae858b30de40e4",
            "route_table_id": "rtb-0e52da3016b44e7b7",
            "subnet_id": "subnet-0c486837cc7a07567"
          },
          "dependencies": [
            "aws_eip.techno_nat_eip",
            "aws_nat_gateway.techno_nat",
            "aws_route_table.techno_private_rt",
            "aws_subnet.techno_private_a",
            "aws_subnet.techno_public_a",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno_private_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24173ba0ba6a698",
            "route_table_id": "rtb-0e52da3016b44e7b7",
            "subnet_id": "subnet-03203ea07f464665f"
          },
          "dependencies": [
            "aws_eip.techno_nat_eip",
            "aws_nat_gateway.techno_nat",
            "aws_route_table.techno_private_rt",
            "aws_subnet.techno_private_b",
            "aws_subnet.techno_public_a",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno_public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ad2feada4a714c",
            "route_table_id": "rtb-0dfbf2ec27559dafc",
            "subnet_id": "subnet-0b1ddb492b4f0af55"
          },
          "dependencies": [
            "aws_internet_gateway.techno_igw",
            "aws_route_table.techno_public_rt",
            "aws_subnet.techno_public_a",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno_public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fbcf26ba8447b5f",
            "route_table_id": "rtb-0dfbf2ec27559dafc",
            "subnet_id": "subnet-00ec6e1c9d119f415"
          },
          "dependencies": [
            "aws_internet_gateway.techno_igw",
            "aws_route_table.techno_public_rt",
            "aws_subnet.techno_public_b",
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techno_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:security-group/sg-0f7608931c46ba893",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7608931c46ba893",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "techno-sg-app",
            "name_prefix": "",
            "owner_id": "778876534404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techno-sg-apps"
            },
            "tags_all": {
              "Name": "techno-sg-apps"
            },
            "timeouts": null,
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techno_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-0c486837cc7a07567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c486837cc7a07567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-private-subnet-a"
            },
            "tags_all": {
              "Name": "techno-private-subnet-a"
            },
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techno_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-03203ea07f464665f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03203ea07f464665f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-private-subnet-b"
            },
            "tags_all": {
              "Name": "techno-private-subnet-b"
            },
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techno_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-0b1ddb492b4f0af55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1ddb492b4f0af55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-public-subnet-a"
            },
            "tags_all": {
              "Name": "techno-public-subnet-a"
            },
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techno_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-00ec6e1c9d119f415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec6e1c9d119f415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-public-subnet-b"
            },
            "tags_all": {
              "Name": "techno-public-subnet-b"
            },
            "vpc_id": "vpc-053c25a95f7ca9dc7"
          },
          "dependencies": [
            "aws_vpc.techno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techno_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:vpc/vpc-053c25a95f7ca9dc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "25.1.0.0/16",
            "default_network_acl_id": "acl-012bd26680ec6ad2f",
            "default_route_table_id": "rtb-01065eadd6a2ca429",
            "default_security_group_id": "sg-03739b5f1c2b7c3a0",
            "dhcp_options_id": "dopt-08af164ebf5d6222e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053c25a95f7ca9dc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01065eadd6a2ca429",
            "owner_id": "778876534404",
            "tags": {
              "Name": "techno-imannuel"
            },
            "tags_all": {
              "Name": "techno-imannuel"
            }
          }
        }
      ]
    }
  ]
}